--- a/css/partial/header.css
+++ b/css/partial/header.css
@@ -3,6 +3,7 @@
     text-align: right;
     box-shadow: 0px 0px 0px 8px #fff, 0px 0px 0px 16px #ffac00; 
     overflow: auto;
+    width: 100%;
 }
 .header img {
     width: 50px;
